adding new margin changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Dawg Pizza</h1>
 		<line>Feeding Hungry Huskies Since 2013</line>
 	</header>
-	<general>
+	<div>
 		<h2>Address</h2>
 		<a href="https://goo.gl/maps/CKrRF">
 			4529 University Way NE<br>
@@ -22,7 +22,7 @@
 		Open daily from noon to midnight
 		<h2>To Order</h2>
 		Call us at <a href="tel:1-408-555-5555">206-555-1212</a>
-	</general>
+	</div>
 	<menu>
 		<h2>Our Menu</h2>
 		<h3>Meat Pies</h3>
@@ -75,6 +75,7 @@
 			  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
 		</dl>
 	</menu>
+	<div padding="1em">
 	<about>
 		<h2>About Us</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -93,6 +94,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
 	</about>
+</div>
 	<footer>
 		<p>&copy; 2014, Dawg Pizza, <a href="mailto:info@dawgpizza.com">info@dawgpizza.com</a>.</p>
 		<p><a href=#>Back to Top &uarr;</a></p>
